--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -401,12 +401,11 @@
                     <c2:ThreadSafeTextBox x:Name="ManaCostPercent" Margin="5,5,5,5" Width="150" TextWrapping="Wrap" Grid.Row="5" Grid.Column="5"/>
                     <Label Content="{DynamicResource labSpellFamilyName}" Margin="5,5,5,5" Grid.Row="6" Grid.Column="4"/>
                     <c2:FilteredComboBox x:Name="SpellFamilyName" Margin="5,5,5,5" Width="150" SelectionChanged="ComboBox_SelectionChanged" LostFocus="FilteredComboBox_LostFocus" Grid.Row="6" Grid.Column="5" ToolTip="You can add entries by editing the SpellFamilies/Definitions.json file."/>
-                    <Label Content="{DynamicResource labSpellFamilyFlags}" Margin="5,5,5,5" Grid.Row="7" Grid.Column="4"/>
-                    <c2:ThreadSafeTextBox x:Name="SpellFamilyFlags" Margin="5,5,5,5" Width="150" TextWrapping="Wrap" Grid.Row="7" Grid.Column="5"/>
-                    <Label Content="{DynamicResource labSpellFamilyFlags1}" Margin="5,5,5,5" Grid.Row="8" Grid.Column="4"/>
-                    <c2:ThreadSafeTextBox x:Name="SpellFamilyFlags1" Margin="5,5,5,5" Width="150" TextWrapping="Wrap" Grid.Row="8" Grid.Column="5"/>
-                    <Label Content="{DynamicResource labSpellFamilyFlags2}" Margin="5,5,5,5" Grid.Row="9" Grid.Column="4"/>
-                    <c2:ThreadSafeTextBox x:Name="SpellFamilyFlags2" Margin="5,5,5,5" Width="150" TextWrapping="Wrap" Grid.Row="9" Grid.Column="5"/>
+                    
+                    <Label Content="{DynamicResource labSpellFamilyFlags}" Margin="5,5,5,5" Grid.Row="10" Grid.Column="4"/>
+                    <ListBox x:Name="BaseSpellFamiliesList" Margin="5,5,5,0" BorderThickness="1" Grid.Row="10" Grid.Column="5" Grid.RowSpan="4"/>
+                    <Button x:Name="BaseSpellsFamiliesButton" Margin="5,5,5,5" Content="Edit Families" Click="EditBaseFamiliesButton_Click" Grid.Row="14" Grid.Column="5"/>
+
                     <Label Content="{DynamicResource labGlobalCooldownTime}" Margin="5,5,5,5" Grid.Row="10" Grid.Column="0"/>
                     <c2:ThreadSafeTextBox x:Name="StartRecoveryTime" Margin="5,5,5,5" Width="150" TextWrapping="Wrap" Grid.Row="10" Grid.Column="1"/>
                     <Label Content="{DynamicResource labMaxTargets}" Margin="5,5,5,5" Grid.Row="11" Grid.Column="0"/>
@@ -419,12 +418,12 @@
                     <c2:ThreadSafeComboBox x:Name="TotemCategory2" Margin="5,5,5,5" Width="150" SelectionChanged="ComboBox_SelectionChanged" Grid.Row="11" Grid.Column="3"/>
                     <Label Content="{DynamicResource labAreaGroup}" Margin="5,5,5,5" Grid.Row="12" Grid.Column="2"/>
                     <c2:ThreadSafeComboBox x:Name="AreaGroup" Margin="5,5,5,5" Width="150" SelectionChanged="ComboBox_SelectionChanged" Grid.Row="12" Grid.Column="3"/>
-                    <Label Content="{DynamicResource labPreventionType}" Margin="5,5,5,5" Grid.Row="10" Grid.Column="4"/>
-                    <c2:ThreadSafeComboBox x:Name="PreventionType" Margin="5,5,5,5" Width="150" Grid.Row="10" Grid.Column="5"/>
-                    <Label Content="{DynamicResource labSpellDamageType}" Margin="5,5,5,5" Grid.Row="11" Grid.Column="4"/>
-                    <c2:ThreadSafeComboBox x:Name="SpellDamageType" Margin="5,5,5,5" Width="150" Grid.Row="11" Grid.Column="5"/>
-                    <Label Content="{DynamicResource labRequiresSpellFocus}" Margin="5,5,5,5" Grid.Row="12" Grid.Column="4"/>
-                    <c2:ThreadSafeComboBox x:Name="RequiresSpellFocus" Margin="5,5,5,5" Width="150" SelectionChanged="ComboBox_SelectionChanged" Grid.Row="12" Grid.Column="5"/>
+                    <Label Content="{DynamicResource labPreventionType}" Margin="5,5,5,5" Grid.Row="7" Grid.Column="4"/>
+                    <c2:ThreadSafeComboBox x:Name="PreventionType" Margin="5,5,5,5" Width="150" Grid.Row="7" Grid.Column="5"/>
+                    <Label Content="{DynamicResource labSpellDamageType}" Margin="5,5,5,5" Grid.Row="8" Grid.Column="4"/>
+                    <c2:ThreadSafeComboBox x:Name="SpellDamageType" Margin="5,5,5,5" Width="150" Grid.Row="8" Grid.Column="5"/>
+                    <Label Content="{DynamicResource labRequiresSpellFocus}" Margin="5,5,5,5" Grid.Row="9" Grid.Column="4"/>
+                    <c2:ThreadSafeComboBox x:Name="RequiresSpellFocus" Margin="5,5,5,5" Width="150" SelectionChanged="ComboBox_SelectionChanged" Grid.Row="9" Grid.Column="5"/>
                     <Label Content="{DynamicResource labRuneCost}" Margin="5,5,5,5" Grid.Row="13" Grid.Column="0"/>
                     <c2:ThreadSafeComboBox x:Name="RuneCost" Margin="5,5,5,5" Width="150" SelectionChanged="ComboBox_SelectionChanged" Grid.Row="13" Grid.Column="1"/>
                     <Label Content="{DynamicResource labSpellDescriptionVariables}" Margin="5,5,5,5" Grid.Row="13" Grid.Column="2"/>
@@ -526,7 +525,7 @@
 
                                 <Label Content="{DynamicResource targetClassMaskSpells}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="471,321,0,0"/>
                                 <ListBox x:Name="EffectSpellFamiliesList1" VerticalAlignment="Top" HorizontalAlignment="Left" Height="235" Margin="610,228,0,0" Width="300" BorderThickness="1"/>
-                                <Button x:Name="EffectSpellsFamiliesButton1" VerticalAlignment="Top" Content="Edit Families" HorizontalAlignment="Left"  Height="30" Margin="610,468,0,0" Width="300" Click="EditFamiliesButton_Click"/>
+                                <Button x:Name="EffectSpellsFamiliesButton1" VerticalAlignment="Top" Content="Edit Families" HorizontalAlignment="Left"  Height="30" Margin="610,468,0,0" Width="300" Click="EditEffectFamiliesButton_Click"/>
                             </Grid>
                         </TabItem>
                         <TabItem Header="{DynamicResource SpellEffects2}" x:Name="effect2TabItem" Width="250" MaxWidth="250">
@@ -574,7 +573,7 @@
 
                                 <Label Content="{DynamicResource targetClassMaskSpells}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="471,321,0,0"/>
                                 <ListBox x:Name="EffectSpellFamiliesList2" VerticalAlignment="Top" HorizontalAlignment="Left" Height="235" Margin="610,228,0,0" Width="300" BorderThickness="1"/>
-                                <Button x:Name="EffectSpellsFamiliesButton2" VerticalAlignment="Top" Content="Edit Families" HorizontalAlignment="Left"  Height="30" Margin="610,468,0,0" Width="300" Click="EditFamiliesButton_Click"/>
+                                <Button x:Name="EffectSpellsFamiliesButton2" VerticalAlignment="Top" Content="Edit Families" HorizontalAlignment="Left"  Height="30" Margin="610,468,0,0" Width="300" Click="EditEffectFamiliesButton_Click"/>
                             </Grid>
                         </TabItem>
                         <TabItem Header="{DynamicResource SpellEffects3}" x:Name="effect3TabItem" Width="250" MaxWidth="250">
@@ -623,7 +622,7 @@
 
                                 <Label Content="{DynamicResource targetClassMaskSpells}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="471,321,0,0"/>
                                 <ListBox x:Name="EffectSpellFamiliesList3" VerticalAlignment="Top" HorizontalAlignment="Left" Height="235" Margin="610,228,0,0" Width="300" BorderThickness="1"/>
-                                <Button x:Name="EffectSpellsFamiliesButton3" VerticalAlignment="Top" Content="Edit Families" HorizontalAlignment="Left"  Height="30" Margin="610,468,0,0" Width="300" Click="EditFamiliesButton_Click"/>
+                                <Button x:Name="EffectSpellsFamiliesButton3" VerticalAlignment="Top" Content="Edit Families" HorizontalAlignment="Left"  Height="30" Margin="610,468,0,0" Width="300" Click="EditEffectFamiliesButton_Click"/>
 
                             </Grid>
                         </TabItem>
