--- a/SpellGUIV2/Sources/Controls/SpellFamilyNames/SpellFamiliesWindow.xaml
+++ b/SpellGUIV2/Sources/Controls/SpellFamilyNames/SpellFamiliesWindow.xaml
@@ -58,10 +58,13 @@
                 </ItemsControl>
             </ScrollViewer>
         </Border>
-        <Label Content="{DynamicResource filterClassMaskSpells}" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="1" Margin="10,18,0,0"/>
-        <common:ThreadSafeTextBox x:Name="FilterClassMaskSpells" VerticalAlignment="Top" HorizontalAlignment="Left" Width="153" TextWrapping="Wrap" Grid.Column="1" Margin="137,18,0,0" TextChanged="FilterClassMaskSpells_TextChanged"/>
-        <Label Content="{DynamicResource targetClassMaskSpells}" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="1" Margin="0,49,0,0"/>
-        <ListBox x:Name="EffectTargetSpellsList" HorizontalAlignment="Left" Width="290" Grid.Column="1" Margin="0,80,0,10" BorderThickness="1"/>
-
+        <common:ThreadSafeTextBox x:Name="FilterClassMaskSpells" mah:TextBoxHelper.Watermark="Filter Spells..." VerticalAlignment="Top" HorizontalAlignment="Left" Width="166" TextWrapping="Wrap" Grid.Column="1" Margin="124,15,0,0" TextChanged="FilterClassMaskSpells_TextChanged"/>
+        <mah:MetroTabControl x:Name="FilterTabControl" Grid.Column="1" VerticalAlignment="Top" Margin="0,41,0,0" HorizontalAlignment="Left" Width="290" SelectionChanged="FilterTabControl_SelectionChanged">
+            <TabItem Header="Modifies" Margin="0,0,-22,0">
+            </TabItem>
+            <TabItem Header="Modified By" Margin="22,0,-22,0"/>
+        </mah:MetroTabControl>
+        <ListBox x:Name="EffectTargetSpellsList" HorizontalAlignment="Left" Width="290" Grid.Column="1" Margin="0,85,0,10" BorderThickness="1"/>
+        <common:ThreadSafeCheckBox x:Name="FilterSpellsDuplicatesCheckbox" ToolTip="Filter Spells that have the same name." Unchecked="FilterSpellsDuplicatesCheckbox_StateChanged" Checked="FilterSpellsDuplicatesCheckbox_StateChanged" IsChecked="True" Content="Filter Duplicates" Grid.Column="1" HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top"/>
     </Grid>
 </controls:MetroWindow>
