--- a/Documentation/Languages/enUS.xaml
+++ b/Documentation/Languages/enUS.xaml
@@ -691,6 +691,16 @@
         Unknown11 |
         Faerie Fire |
         Healthless 35 Percent |
+        Conflagrate |
+        Swiftmend |
+        Deadly Poison |
+        Enrage |
+        Bleeding |
+        Parry |
+        Unknown20 |
+        Unknown21 |
+        Unknown22 |
+        Health Above 75 Percent
 	<system:String x:Key="invisibility_strings">
 		0 - General (Classes and creatures) |
 		1 - Invisibility 1 |
